[tool.poetry]
name = "angular+postgre"
version = "0.1.0"
description = ""
authors = ["Marius Gjerde <marius@mgjerde.no>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
